* Fix align of multiple lines of subtitle on info tile

--- a/view/css/app.css
+++ b/view/css/app.css
@@ -677,6 +677,7 @@ label
 .info_subtitle
 {
 	font-size: 12px;
+	text-align: right;
 	top: 5px;
 	right: 5px;
 	position: absolute;
